cmake_minimum_required(VERSION 2.6)
set(PROJ cityfs)
set (COVSO_VERSION_MAJOR 1)
set (COVSO_VERSION_MINOR 0)
set (COVSO_VERSION_PATCH 0)
set (COVSO_VERSION ${COVSO_VERSION_MAJOR}.${COVSO_VERSION_MINOR}.${COVSO_VERSION_PATCH})

project(${PROJ})
set(CMAKE_CXX_FLAGS "-std=c++11")
add_definitions( -D_FILE_OFFSET_BITS=64)
include_directories(.)
set(SOURCES)
set(SOURCES ${SOURCES} src/cityfs.cpp)
set(SOURCES ${SOURCES} src/http_kit.cpp)
set(SOURCES ${SOURCES} src/country_codes.cpp)
set(SOURCES ${SOURCES} src/cityfs_weather.cpp)
set(SOURCES ${SOURCES} src/driver.cpp)
add_executable(${PROJ} ${SOURCES})

# Just supporting Linux and MacOS for now.
if(APPLE) 
  message(STATUS "Apple build...")
  target_link_libraries(${PROJ} curl osxfuse)
else()
  message(STATUS "Non-Apple build...")
  target_link_libraries(${PROJ} curl fuse pthread)
endif()

install (TARGETS ${PROJ} DESTINATION bin)

